// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SideCards Component AccessCode sidecard 1`] = `
<div>
  <div
    className="dashboard-spacing"
    style={
      Object {
        "position": "relative",
      }
    }
  >
    <div
      className="row"
    >
      <div
        className="col-12"
        style={
          Object {
            "paddingTop": "30px",
            "position": "relative",
          }
        }
      >
        <p />
        <section
          className="bluegrey-container"
          id="bluegrey-section"
        >
          <div
            className="container-background bluegrey-heading"
          >
            <h2
              className="heading-style"
            >
              Need help with an access code?
            </h2>
          </div>
          <div
            className="bluegrey-content"
          >
            <span
              className="content-style"
            >
              Access code is specific to each organization. If you need help with the organization access code, please 
              <b
                className="block"
              >
                contact your organization.
              </b>
            </span>
          </div>
        </section>
      </div>
    </div>
  </div>
</div>
`;

exports[`SideCards Component AccessCode sidecard 2`] = `
<div>
  <div
    className="dashboard-spacing"
    style={
      Object {
        "position": "relative",
      }
    }
  >
    <div
      className="row"
    >
      <div
        className="col-12"
        style={
          Object {
            "paddingTop": "30px",
            "position": "relative",
          }
        }
      >
        <p />
        <section
          className="submit-container"
          id="blue-section"
        >
          <h2
            className="heading-style"
          >
            Useful Links
          </h2>
          <div
            className="submit-content"
          >
            <span>
              <li
                className="menuItem"
              >
                <a
                  href="/"
                >
                  Home
                </a>
              </li>
              <li
                className="menuItem"
              >
                <a
                  href="/somewhere"
                >
                  Somewhere
                </a>
              </li>
              <li
                className="menuItem"
              >
                <a
                  href="/somewhereelse"
                >
                  Somewhere else
                </a>
              </li>
              <li
                className="menuItem"
              >
                <a
                  href="/here"
                >
                  Somewhere with a long name for no reason
                </a>
              </li>
            </span>
          </div>
        </section>
      </div>
    </div>
  </div>
</div>
`;

exports[`SideCards Component BcServices sidecard 1`] = `
<div>
  <div
    className="dashboard-spacing"
    style={
      Object {
        "position": "relative",
      }
    }
  >
    <div
      className="row"
    >
      <div
        className="col-12"
        style={
          Object {
            "paddingTop": "30px",
            "position": "relative",
          }
        }
      >
        <p />
        <section
          className="submit-container"
          id="blue-section"
        >
          <h2
            className="heading-style"
          >
            Get a BC Services Card
          </h2>
          <div
            className="submit-content"
          >
            <span>
              B.C. residents who have lived in the province for at least six months must use a BC Services Card to log in to the online qualification tool. Learn how to get a card.
              <button
                className="btn btn-primary dark-button btn btn-md"
                onClick={[Function]}
                type="submit"
              >
                READ MORE
              </button>
            </span>
          </div>
        </section>
      </div>
    </div>
  </div>
</div>
`;

exports[`SideCards Component ContactInformation sidecard 1`] = `
<div>
  <div
    className="dashboard-spacing"
    style={
      Object {
        "position": "relative",
      }
    }
  >
    <div
      className="row"
    >
      <div
        className="col-12"
        style={
          Object {
            "paddingTop": "30px",
            "position": "relative",
          }
        }
      >
        <p />
        <section
          className="submit-container"
          id="blue-section"
        >
          <h2
            className="heading-style"
          >
            Contact the Criminal Records Review Program
          </h2>
          <div
            className="submit-content"
          >
            <span>
              <div
                style={
                  Object {
                    "fontSize": "16px",
                  }
                }
              >
                For questions about criminal record checks, contact the Criminal Records Review Program Monday to Friday, 8:30 a.m. - 4:30 p.m.
              </div>
              <div
                style={
                  Object {
                    "paddingTop": "20px",
                  }
                }
              >
                <div>
                  <span
                    className="contact-title"
                  >
                    Fax: 
                  </span>
                   250 356-1889
                </div>
                <div>
                  <span
                    className="contact-title"
                  >
                    Office: 
                  </span>
                  Toll free - 1 855 587-0185 (press option 2)
                </div>
                <div>
                  <span
                    className="contact-title"
                  >
                    Email: 
                  </span>
                  <a
                    className="email"
                    href="mailto:criminalrecords@gov.bc.ca"
                  >
                    criminalrecords@gov.bc.ca
                  </a>
                </div>
              </div>
            </span>
          </div>
        </section>
      </div>
    </div>
  </div>
</div>
`;

exports[`SideCards Component CriminalRecord sidecard 1`] = `
<div>
  <div
    className="dashboard-spacing"
    style={
      Object {
        "position": "relative",
      }
    }
  >
    <div
      className="row"
    >
      <div
        className="col-12"
        style={
          Object {
            "paddingTop": "30px",
            "position": "relative",
          }
        }
      >
        <p />
        <section
          className="submit-container"
          id="blue-section"
        >
          <h2
            className="heading-style"
          >
            Why do I need to apply and consent to a criminal record check?
          </h2>
          <div
            className="submit-content"
          >
            <span>
              Learn more about the process
              <button
                className="btn btn-primary dark-button btn btn-md"
                onClick={[Function]}
                type="submit"
              >
                VISIT THE CRIMINAL RECORD REVIEW WEBSITE
              </button>
            </span>
          </div>
        </section>
      </div>
    </div>
  </div>
</div>
`;
